redis lib does not support tomcat 8